code to write key vals to csv for extraction inc sample size

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Takes rand sample of data to form test dataset for dict building\n",
     "\n",
-    "adware_sample = np.random.randint(0, high=887, size=(1,50))\n",
-    "banking_sample = np.random.randint(0, high=2049, size=(1,50))\n",
-    "riskware_sample = np.random.randint(0, high=2374, size=(1,50))\n",
-    "sms_sample = np.random.randint(0, high=3853, size=(1,50))\n",
+    "adware_sample = np.random.randint(0, high=886, size=(1,100))\n",
+    "banking_sample = np.random.randint(0, high=2048, size=(1,100))\n",
+    "riskware_sample = np.random.randint(0, high=2373, size=(1,100))\n",
+    "sms_sample = np.random.randint(0, high=3852, size=(1,100))\n",
     "\n",
     "sample_mat = np.concatenate((adware_sample, banking_sample), axis=0)\n",
     "sample_mat = np.concatenate((sample_mat, riskware_sample), axis=0)\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,9 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['arguments' 'class' 'classType' 'interface' 'interfaceGroup' 'low'\n 'method' 'operationFlags' 'procname' 'subclass' 'tid']\n[  22198 7169259   78358   22198   22198 7169259   22198   70940   81202\n    4094   81202]\n"
+     ]
+    }
+   ],
    "source": [
     "# See the frequency of all high level keys\n",
     "high_keys = []\n",
@@ -202,9 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['blob' 'id' 'methodName' 'method_name' 'parameters' 'read fd' 'socket fd'\n 'sysname' 'ts' 'type' 'write fd' 'xref']\n[ 904587 7995480   22198    2844 7065859    1830    1250 7973282 7995480\n 7995480    1830  823766]\n"
+     ]
+    }
+   ],
    "source": [
     "# See the frequency of low-level tokens\n",
     "low_keys = []\n",
@@ -246,38 +262,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-7822db5fa6df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mlowest_keys\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0msample\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msample_data\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0msample_json\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'behaviors'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'dynamic'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'host'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mbehavior\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msample_json\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mlow_behavior\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbehavior\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'low'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\json\\__init__.py\u001b[0m in \u001b[0;36mloads\u001b[1;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    346\u001b[0m             \u001b[0mparse_int\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mparse_float\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    347\u001b[0m             parse_constant is None and object_pairs_hook is None and not kw):\n\u001b[1;32m--> 348\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    349\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    350\u001b[0m         \u001b[0mcls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mJSONDecoder\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\json\\decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[1;34m(self, s, _w)\u001b[0m\n\u001b[0;32m    335\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    336\u001b[0m         \"\"\"\n\u001b[1;32m--> 337\u001b[1;33m         \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    338\u001b[0m         \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    339\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\json\\decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    351\u001b[0m         \"\"\"\n\u001b[0;32m    352\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 353\u001b[1;33m             \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    354\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    355\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mJSONDecodeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Expecting value\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# See the frequency of low-level tokens\n",
-    "lowest_keys = []\n",
-    "for sample in sample_data:\n",
-    "    sample_json = json.loads(sample)['behaviors']['dynamic']['host']\n",
-    "    for behavior in sample_json:\n",
-    "        for low_behavior in behavior['low']:\n",
-    "            for key in low_behavior.keys():\n",
-    "                if key == 'blob':\n",
-    "                    string_dict = low_behavior['blob']\n",
-    "                    if type(string_dict) is dict:\n",
-    "                        for lowest_key in string_dict.keys():\n",
-    "                            lowest_keys.append(lowest_key)\n",
-    "                    else:\n",
-    "                        string_dict = string_dict.replace(\"L,\", \",\")\n",
-    "                        string_dict = string_dict.replace(\"L}\", \"}\")\n",
-    "                        string_dict = string_dict.replace(\"u\\'\", \"\\'\")\n",
-    "                        string_dict = string_dict.replace(\"\\'\", \"\\\"\")\n",
-    "                        try:\n",
-    "                            string_dict = ast.literal_eval(string_dict)\n",
-    "                        except:\n",
-    "                            pass\n",
-    "                        if type(string_dict) is dict:\n",
-    "                            for lowest_key in string_dict.keys():\n",
-    "                                lowest_keys.append(lowest_key)\n",
+    "# lowest_keys = []\n",
+    "# for sample in sample_data:\n",
+    "#     sample_json = json.loads(sample)['behaviors']['dynamic']['host']\n",
+    "#     for behavior in sample_json:\n",
+    "#         for low_behavior in behavior['low']:\n",
+    "#             for key in low_behavior.keys():\n",
+    "#                 if key == 'blob':\n",
+    "#                     string_dict = low_behavior['blob']\n",
+    "#                     if type(string_dict) is dict:\n",
+    "#                         for lowest_key in string_dict.keys():\n",
+    "#                             lowest_keys.append(lowest_key)\n",
+    "#                     else:\n",
+    "#                         string_dict = string_dict.replace(\"L,\", \",\")\n",
+    "#                         string_dict = string_dict.replace(\"L}\", \"}\")\n",
+    "#                         string_dict = string_dict.replace(\"u\\'\", \"\\'\")\n",
+    "#                         string_dict = string_dict.replace(\"\\'\", \"\\\"\")\n",
+    "#                         try:\n",
+    "#                             string_dict = ast.literal_eval(string_dict)\n",
+    "#                         except:\n",
+    "#                             pass\n",
+    "#                         if type(string_dict) is dict:\n",
+    "#                             for lowest_key in string_dict.keys():\n",
+    "#                                 lowest_keys.append(lowest_key)\n",
     "\n",
-    "lowest_uniq_keys, lowest_frequency = np.unique(lowest_keys, return_counts=True)\n",
-    "print(lowest_uniq_keys)\n",
-    "print(lowest_frequency)"
+    "# lowest_uniq_keys, lowest_frequency = np.unique(lowest_keys, return_counts=True)\n",
+    "# print(lowest_uniq_keys)\n",
+    "# print(lowest_frequency)"
    ]
   },
   {
@@ -317,37 +348,58 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "exclude_keys = ['parameters', 'id', 'blob', 'xref', 'ts', 'arguments', 'tid']\n",
+    "\n",
+    "master_dict = {\n",
+    "    'methodName': [],\n",
+    "    'method_name': [],\n",
+    "    'read fd': [],\n",
+    "    'socket fd': [],\n",
+    "    'sysname': [],\n",
+    "    'type': [],\n",
+    "    'write fd': [],\n",
+    "    'class': [],\n",
+    "    'classType': [],\n",
+    "    'interface': [],\n",
+    "    'interfaceGroup': [],\n",
+    "    'method': [],\n",
+    "    'operationFlags': [],\n",
+    "    'procname': [],\n",
+    "    'subclass': []\n",
+    "}\n",
     "\n",
     "for sample in sample_data:\n",
     "    sample_json = json.loads(sample)['behaviors']['dynamic']['host']\n",
     "    for behavior in sample_json:\n",
     "        for key, value in behavior.items():\n",
     "            if key not in exclude_keys:\n",
-    "\n",
+    "                master_dict[key].append(value)\n",
     "            else:\n",
     "                continue\n",
     "            for low_behavior in behavior['low']:\n",
     "                for low_key, low_value in low_behavior.items():\n",
     "                    if low_key not in exclude_keys:\n",
-    "                        \n",
+    "                        master_dict[low_key].append(low_value)\n",
     "                    else:\n",
-    "                        continue"
-   ]
-  },
-  {
-   "source": [
-    "# uniq, counts = np.unique(value_list, return_counts=True)"
+    "                        continue\n",
+    "\n",
+    "for ref_key, total_values in master_dict.items():\n",
+    "    df = pd.DataFrame(total_values, columns=[ref_key])\n",
+    "    with open('token_extraction\\\\csvs\\\\' + ref_key + '.csv', 'w') as write_csv:\n",
+    "        df.to_csv(write_csv, index=False)"
    ],
    "cell_type": "code",
    "metadata": {},
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "source": [
