--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -42,7 +42,10 @@
     "import json \n",
     "import numpy as np\n",
     "import tensorflow_text as text\n",
-    "import ast"
+    "import ast\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['arguments' 'class' 'classType' 'interface' 'interfaceGroup' 'low'\n 'method' 'operationFlags' 'procname' 'subclass' 'tid']\n[   33630 11054002   143020    33630    33630 11054002    33630   129566\n   150576     9613   150576]\n"
+      "['arguments' 'class' 'classType' 'interface' 'interfaceGroup' 'low'\n 'method' 'operationFlags' 'procname' 'subclass' 'tid']\n[  268281 11296091   134499   268281   268281 11296091   268281   119355\n   151538    19879   151538]\n"
      ]
     }
    ],
@@ -210,14 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['blob' 'id' 'methodName' 'method_name' 'parameters' 'read fd' 'socket fd'\n 'sysname' 'ts' 'type' 'write fd' 'xref']\n[ 1283760 12194719    33630     7556 10869796     3056     2380 12161089\n 12194719 12194719     3056  1136471]\n"
+      "['blob' 'id' 'methodName' 'method_name' 'parameters' 'read fd' 'socket fd'\n 'sysname' 'ts' 'type' 'write fd' 'xref']\n[ 1458861 12620448   268281    17039 10876272     3555     2528 12352167\n 12620448 12620448     3555  1319538]\n"
      ]
     }
    ],
@@ -262,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,23 +372,134 @@
     "                            continue\n",
     "            else:\n",
     "                continue\n",
-    "\n",
-    "for ref_key, total_values in master_dict.items():\n",
-    "    df = pd.DataFrame(total_values, columns=[ref_key])\n",
-    "    with open('token_extraction\\\\csvs\\\\' + ref_key + '.csv', 'w') as write_csv:\n",
-    "        df.to_csv(write_csv, index=False)"
+    "\n"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 11,
-   "outputs": []
+   "execution_count": 8,
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"numpy.bool_\") to str",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-a1f7af369670>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[0mnum_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtotal_values\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[0mlen_match\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtotal_count\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mnum_values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mref_key\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m': '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mlen_match\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtotal_values\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mref_key\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'token_extraction\\\\csvs\\\\'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mref_key\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mwrite_csv\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"numpy.bool_\") to str"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "methodName: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "method_name: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "read fd: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "socket fd: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "sysname: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "type: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "write fd: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "class: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "classType: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "interface: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "interfaceGroup: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "method: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "operationFlags: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "procname: \n",
+      "True\n",
+      "\n",
+      "\n",
+      "subclass: \n",
+      "True\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ref_key, total_values in master_dict.items():\n",
+    "    if ref_key in high_uniq_keys:\n",
+    "        total_count = high_frequency[np.where(high_uniq_keys == ref_key)[0][0]]\n",
+    "        num_values = len(total_values)\n",
+    "        len_match = total_count == num_values\n",
+    "        print(ref_key + ': ')\n",
+    "        print(len_match)\n",
+    "        print('\\n')\n",
+    "    elif ref_key in low_uniq_keys:\n",
+    "        total_count = low_frequency[np.where(low_uniq_keys == ref_key)[0][0]]\n",
+    "        num_values = len(total_values)\n",
+    "        len_match = total_count == num_values\n",
+    "        print(ref_key + ': ')\n",
+    "        print(len_match)\n",
+    "        print('\\n')\n",
+    "    df = pd.DataFrame(total_values, columns=[ref_key])\n",
+    "    with open('token_extraction\\\\csvs\\\\' + ref_key + '.csv', 'w') as write_csv:\n",
+    "        df.to_csv(write_csv, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def make_plots(dataframe):\n",
+    "    plot, axes = plt.subplots(2,1, figsize=[11.8, 20.9], sharex=True, sharey=True)\n",
+    "    values = dataframe.iloc[:,0].to_numpy()\n",
+    "    categories, counts = np.unique(values, return_counts=True)\n",
+    "\n",
+    "    axes[0,0].pie(counts, labels=categories, autopct='%1.1f%%')\n",
+    "    axes[0,0].axis('equal')\n",
+    "    axes[0,0].set_title(\"Makeup of Unique Values for Key: \" + dataframe.columns.values.tolist()[0])\n",
+    "    axes[0,0].legend()"
+   ]
   },
   {
    "source": [
