processed crashed, restarting

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
     "    labels = ['{0} - {1:1.2f}% ({2})'.format(i,j,k) for i,j,k in zip(categories, percentage, counts)]\n",
     "    top.legend(patches, labels, frameon=False, loc = 'center left', bbox_to_anchor=(-0.5, 0.5))\n",
     "\n",
-    "    sns.histplot(ax=bottom, data=dataframe, y=key_name, hue=key_name, shrink=.8, discrete=True)\n",
+    "    sns.histplot(ax=bottom, data=dataframe, y=key_name, hue=key_name, shrink=.8, legend=False, discrete=True)\n",
     "    bottom.set_title(\"Frequency of Unique Values for Key: \" + key_name)\n",
     "\n",
     "    plot.savefig('token_extraction\\\\visualizations\\\\' + filename + '.png', dpi=100, bbox_inches='tight')"
@@ -459,10 +459,13 @@
     }
    ],
    "source": [
+    "omit_keys = ['class', 'classType', 'interface', 'interfaceGroup', 'method', 'methodName']\n",
+    "\n",
     "for csv_file in os.listdir('token_extraction\\\\csvs'):\n",
-    "    with open('token_extraction\\\\csvs\\\\' + csv_file) as csv_path:\n",
-    "        data = pd.read_csv(csv_path)\n",
-    "    make_plots(data, csv_file.replace('.csv', ''))"
+    "    if csv_file.replace('.csv', '') not in omit_keys:\n",
+    "        with open('token_extraction\\\\csvs\\\\' + csv_file) as csv_path:\n",
+    "            data = pd.read_csv(csv_path)\n",
+    "        make_plots(data, csv_file.replace('.csv', ''))"
    ]
   },
   {
