--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -430,11 +430,11 @@
    "source": [
     "omit_keys = []\n",
     "\n",
-    "for csv_file in os.listdir('token_extraction\\\\csvs'):\n",
-    "    if csv_file.replace('.csv', '') not in omit_keys:\n",
-    "        with open('token_extraction\\\\csvs\\\\' + csv_file) as csv_path:\n",
-    "            data = pd.read_csv(csv_path)\n",
-    "        make_plots(data, csv_file.replace('.csv', ''))"
+    "# for csv_file in os.listdir('token_extraction\\\\csvs'):\n",
+    "#     if csv_file.replace('.csv', '') not in omit_keys:\n",
+    "#         with open('token_extraction\\\\csvs\\\\' + csv_file) as csv_path:\n",
+    "#             data = pd.read_csv(csv_path)\n",
+    "#         make_plots(data, csv_file.replace('.csv', ''))"
    ]
   },
   {
