comment to warn about ignored dependencies

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -430,6 +430,8 @@
    "source": [
     "omit_keys = []\n",
     "\n",
+    "# WARNING: The csv files 'class', 'type' and 'sysname' are too large to be included in the repo. These will have to be created locally to fully utilize this script.\n",
+    "\n",
     "# for csv_file in os.listdir('token_extraction\\\\csvs'):\n",
     "#     if csv_file.replace('.csv', '') not in omit_keys:\n",
     "#         with open('token_extraction\\\\csvs\\\\' + csv_file) as csv_path:\n",
