logged key percent and count to raw txt

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,6 +451,28 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alt_keys = []\n",
+    "\n",
+    "# for key in alt_keys:\n",
+    "#     with open('token_extraction\\\\csvs\\\\' + key + '.csv') as open_csv:\n",
+    "#         key_data = pd.read_csv(open_csv)\n",
+    "#     key_data.fillna(\"NaN\", inplace=True)\n",
+    "#     values = key_data[key].to_numpy()\n",
+    "#     categories, counts = np.unique(values, return_counts=True)\n",
+    "#     categories = categories[np.argsort(-counts)]\n",
+    "#     counts = counts[np.argsort(-counts)]\n",
+    "#     percentage = 100.*counts/counts.sum()\n",
+    "#     lines = ['{0} - {1:1.2f}% ({2}) \\n'.format(i,j,k) for i,j,k in zip(categories, percentage, counts)]\n",
+    "#     with open('token_extraction\\\\raw\\\\' + key + '.txt', 'w') as write_txt:\n",
+    "#         write_txt.writelines(lines)"
+   ]
   },
   {
    "source": [
