--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -504,7 +504,9 @@
     "* Cheaply iterable (RegEx will split the behaviors into lists of tokens that then need to be referenced with indicies, this can't take very long)\n",
     "#### Dictionary Format\n",
     "* Int of token index as key\n",
-    "* Value will be touple of RegEx expression and list of corresponding unique tokens as plain strings"
+    "* Value will be touple of RegEx expression and list of corresponding unique tokens as plain strings\n",
+    "### Important Notes\n",
+    "* interfaceGroup does not offer any additional information over interface, therefore it is not accounted for in the vocabulary and should be excluded from the final data"
    ],
    "cell_type": "markdown",
    "metadata": {}
