--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -32,20 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
+    "# import tensorflow as tf\n",
     "import pandas as pd \n",
     "import os\n",
     "import json \n",
     "import numpy as np\n",
-    "import tensorflow_text as text\n",
+    "# import tensorflow_text as text\n",
     "import ast\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from gensim.corpora import Dictionary\n",
     "%matplotlib inline"
    ]
   },
@@ -455,9 +454,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "('\"method\": \"getIccSerialNumber\"', ['\"method\": \"getIccSerialNumber\"']),\n"
+     ]
+    }
+   ],
    "source": [
     "alt_keys = []\n",
     "\n",
@@ -472,7 +479,9 @@
     "#     percentage = 100.*counts/counts.sum()\n",
     "#     lines = ['{0} - {1:1.2f}% ({2}) \\n'.format(i,j,k) for i,j,k in zip(categories, percentage, counts)]\n",
     "#     with open('token_extraction\\\\raw\\\\' + key + '.txt', 'w') as write_txt:\n",
-    "#         write_txt.writelines(lines)"
+    "#         write_txt.writelines(lines)\n",
+    "\n",
+    "print('(\\'\\\"method\\\": \\\"getIccSerialNumber\\\"\\', [\\'\\\"method\\\": \\\"getIccSerialNumber\\\"\\']),')"
    ]
   },
   {
@@ -491,6 +500,76 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['/data/data/com' '/system/bin/cat' '/system/bin/dexopt' '/system/bin/sh'\n '<pre-initialized>' 'AsyncTask #1' 'BUGLY_THREAD' 'IntentService[l'\n 'Jk7H' 'MidWorkThread' 'QueiD9ej' 'Thread-101' 'Thread-102' 'Thread-103'\n 'Thread-104' 'Thread-105' 'Thread-108' 'Thread-109' 'Thread-110'\n 'Thread-111' 'Thread-113' 'Thread-114' 'Thread-115' 'Thread-116'\n 'Thread-118' 'Thread-120' 'Thread-123' 'Thread-125' 'Thread-126'\n 'Thread-127' 'Thread-128' 'Thread-129' 'Thread-130' 'Thread-132'\n 'Thread-133' 'Thread-136' 'Thread-142' 'Thread-157' 'Thread-160'\n 'Thread-168' 'Thread-87' 'Thread-88' 'Thread-89' 'Thread-91' 'Thread-92'\n 'Thread-93' 'Thread-94' 'Thread-95' 'Thread-97' 'Thread-98' 'ad'\n 'afdejlql' 'air' 'anzmltoane' 'biz' 'brendsu' 'cat' 'cfdfvf' 'ch' 'chmod'\n 'cn' 'com' 'cpx' 'dilashama' 'dlki' 'edu' 'ensufwosr' 'eu' 'exin01'\n 'getprop' 'ggican' 'googleanzhi' 'googlems' 'gzg' 'igudi' 'info' 'jp'\n 'jyiaivi' 'logcat' 'ls' 'luy' 'midlet' 'movecont2' 'mvnxuuyuqbklpjpw'\n 'mwlqythh' 'net' 'ngjvnpslnp' 'nmwurmoxc' 'oeiah' 'of' 'org'\n 'pool-1-thread-1' 'pool-2-thread-1' 'pool-3-thread-1' 'pool-3-thread-2'\n 'pool-4-thread-1' 'pool-5-thread-1' 'pool-7-thread-1' 'ps' 'quri' 'ren'\n 'rom' 'ru' 's' 'service' 'sh' 'silao' 'srcdsnms' 'ssadsdf' 'su' 'tax'\n 'test' 'tj' 'tp5x' 'tta' 'ua' 'ulkfg' 'urw' 'vbkoxh' 'vbnxjb' 'vdman'\n 'vfiakd' 'vrnyl' 'vudk' 'vvxxbb' 'wcu' 'xgqkjm' 'xiaihui' 'xiivig' 'xw'\n 'yhonvqb' 'yun01' 'za000' 'zhuangbishenqi' 'zitong' 'zygote']\n[  3   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1\n   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1\n   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1\n   1   1   1   1   1   1   7 205   1   1   1   2   1   2   1   1   1   1\n   1   1   1   1   1   1   1   1   1   1   1   1   1   7   1   1   1   1\n   7   1   1   1   1   1   1   1   2   1   2   1   4   1   1   1   1   1\n   1   2   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1\n   1   1   1   1   1   1   1   1   1   1]\n\n\n['PwcD' 'Tiomiym9' 'WGt12' 'ada' 'adwo' 'akdfjd' 'alumberinc' 'andorid'\n 'android' 'androidemu' 'apk' 'app' 'apps' 'aqizhib' 'aql' 'arrow'\n 'attend' 'azyouxi' 'baoshi' 'battery' 'bb' 'bcfdfvf' 'bfveeopo' 'bowl'\n 'bratolubzet' 'bravo' 'bslsvpcn' 'bull88' 'cash' 'ccav' 'ccponcerinc'\n 'chenchel' 'colorme' 'com' 'convertoman' 'cooease' 'cql' 'crovjjs'\n 'cswnpr' 'd' 'de' 'def' 'depositmobi' 'dgoizzrboarj' 'dkfi' 'dobi'\n 'douniwaner' 'droid' 'drv' 'dxgdldfdycdchj' 'eoeof' 'espabit' 'example'\n 'exin02' 'ezahS1gi' 'facbbvhir' 'fanta' 'feifei' 'fengche' 'fepefepopab'\n 'fhkuuej' 'freda' 'free' 'game' 'gamedemo' 'games' 'gamex' 'gcaktairccvz'\n 'genaqeburi' 'google' 'googleapi' 'gp' 'gps' 'greensoft' 'gsh' 'guao'\n 'ha' 'han' 'hana' 'hanjins123123' 'hao' 'hh' 'holy' 'hongxiu' 'hosy'\n 'hssd' 'ic3b48cbcbd24e55b' 'ilbypx' 'inca' 'ion' 'iplhmk' 'ipukgw'\n 'iqeadmcuzf' 'jaw' 'jbb' 'jgvfvdaw' 'jlimwd' 'jonas' 'juyu' 'jwnnvvwxn'\n 'kait' 'kaiv' 'kajg' 'kangkang' 'kaoeiwk3223' 'kb' 'kbs' 'kbzezj'\n 'kdpyvc' 'kjw' 'kkk' 'ko' 'kwl' 'lck' 'lctyznvnh' 'lgz' 'li' 'll'\n 'llrgkj' 'locker' 'long01' 'loonggg' 'lpo' 'mDJswaqu4'\n 'manufacturatinkov' 'margaritasoft' 'mdf' 'meinv' 'metasploit' 'mix'\n 'mobi' 'modded' 'mogo' 'monkeytouchs' 'mrken' 'msefsgting' 'mskdev' 'muc'\n 'musicsleep' 'mwkek' 'mx' 'myfoot' 'nanoha' 'net' 'netlizard' 'newapp'\n 'newskin' 'nfidcq' 'ngthz' 'nhnewbank' 'ni' 'nijibolan' 'nomnq' 'note'\n 'notify1' 'ns1d' 'nth' 'oaAlmL' 'ohduxbbylb' 'onmsrbt' 'ooedhsl'\n 'openintents' 'or' 'orangeery' 'patusd' 'pointhim' 'police20' 'ppd' 'ps'\n 'qabocemawesi' 'qaolckwnvj' 'qeykn' 'qianmingdshi' 'qkhyzaopiz' 'qklsjv'\n 'qq' 'qunqiandao' 'rexsee' 'roamingsoft' 'rock' 'rokcvyfjtdp'\n 'rwbkulojmti' 'satismangrooup' 'sh' 'shinhan' 'shirley' 'silaisilao'\n 'sniff' 'soft' 'softforlife' 'software' 'ss' 'strongtech' 'symapp' 'task'\n 'termate' 'timer' 'timo' 'tqb' 'trdos' 'truefalse' 'ttb' 'tvone'\n 'txdvvmncciiri' 'underdev' 'une' 'utviqi' 'uus01' 'uyf' 'video'\n 'viploder' 'vvlncl' 'vwtavlp' 'wangyh' 'wb' 'we' 'weuh' 'wgk' 'wl'\n 'woorinewbank' 'wrsqc' 'wuzi' 'wvaomvba' 'wxqhbfz' 'xdwf' 'xee'\n 'xgssubbt' 'xiao88' 'xiaoniaolianliankan09' 'xmeudp' 'yci' 'ycvdgfwk'\n 'yfan' 'yongrun' 'yyasp' 'yybergeanzhi' 'zZMdMtw' 'za111' 'zcrqwa' 'zh'\n 'zhen001' 'znn' 'zrh' 'zwlxiaoxiao' 'zyj']\n[ 1  1  1  1  1  1  1  1 30  3  1  1  2  1  1  1  1  1  1  1  1  2  1  1\n  1  1  1  1  1  1  1  1  3  7  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  3  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  3  1  3\n  1  2  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  1  1  1  1  1  1  3  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  3  1  1  1  1  1  1  3  1  1  1  1  1  1  1  1  1  1  1  1  1  1  5  2\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  2  1\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  1]\n\n\n['A120404_camera2' 'DropBubble' 'GestureWidget_free'\n 'KalromSystems.FlappyYou' 'Mzgrr' 'Potzimm9' 'Rn.adS:xs' 'Solo'\n 'TrueOrFalse' 'a2ar.sfm.adp2p' 'aardehddeluxeedition' 'abc'\n 'abxingxdmimi.test' 'adamusice' 'admin.hongyan' 'akalc' 'akdfkda'\n 'andrinst' 'android' 'android.appinstaller'\n 'android.contentabo_l01_sim_univ' 'android.ebk.hana.ibkb'\n 'android.games.mine' 'antivirus' 'apc.woori.kr.android.apd' 'app'\n 'app.sxmn' 'app253480' 'app253489' 'appdownload' 'application' 'apps'\n 'appzwlxiaoxiao' 'autoanswer' 'avve' 'awgubnyx' 'babbleharbor'\n 'backup.think' 'bbyupn' 'bcdbcf12014.mobile' 'bluetooth' 'bmsvhzhlh'\n 'bull99' 'bysc' 'calendar' 'callrecorder' 'cepter' 'chrm67.service'\n 'clock' 'cn' 'cocos.gj' 'coolpic' 'cores' 'cosina.game.kickkick'\n 'crazygame' 'csppxx.lock0011' 'cug.compass' 'cxyyvm/files/libyunsvc'\n 'dawdlermenu' 'dd' 'dd.axkyrbacnplcm.vj' 'ddp' 'dkuca' 'dlpushplugin'\n 'dmjino:sev' 'donote' 'eascwz' 'eeepsjej' 'egypt' 'eley' 'emcpvq'\n 'emu.hwjisufeiche' 'english.audiostory' 'essexyfaceGR' 'exam.accountant'\n 'ezboys:sev' 'filemanager' 'firstdevelop' 'flashlight' 'flickrdailyshow'\n 'food02' 'future' 'fwlnxn' 'gCrziJ' 'game.RedMenaceb1'\n 'game.dongtaigaonanduzhaocha' 'game.kaoladaishu' 'game.plane'\n 'game.zombiesboss' 'gcwhbl' 'gfiybbpc' 'gfsittfy' 'girl.zipai'\n 'google.kr.channel.korea.app' 'google.nhb.kr.bk.app' 'gota'\n 'guihuijipaon.test' 'gxluh' 'hanyu' 'harvemario:emulator'\n 'harvexueren:emulator' 'hasvgf:sev' 'holocaust435' 'honda' 'idhfxz'\n 'install' 'instman' 'jdjgl' 'jewels' 'jgvfvdaw'\n 'jgvfvdaw/files/libyunsvc' 'jnkgpwcl' 'jsy.kittymemohvc' 'jvje.nuky'\n 'kaqdok:es' 'kb' 'kgopon' 'kigof.qabocemawesi' 'kkc.xsezse' 'kqsgzyjzjhb'\n 'kr' 'kura' 'legendasura' 'lhtnemrp/files/libyunsvc' 'live'\n 'livewallpaper.xiangcun1' 'livewallpapersb127' 'llk' 'maboo.tow'\n 'mahjongg' 'man30' 'manager.root' 'market' 'marketapp'\n 'merrychristmas2015' 'message' 'mhwwkd:es' 'mkt' 'mmreader1065'\n 'mmreader1075' 'mmreader255' 'mmreader354' 'mmreader383' 'mmreader392'\n 'mmreader418' 'mmreader588' 'mmreader611' 'mmreader678' 'mmreader681'\n 'mmreader717' 'mmreader801' 'monkey.ui' 'music20130514000421' 'mxdsharde'\n 'nddhkx:es' 'nghcyr' 'nhyundai' 'nijibolan' 'ninjaturtlesflapy'\n 'noort.bcddgi12257.model' 'notor.bcdidg12725.model' 'nyzombies' 'nzdmdn'\n 'nzza' 'obzalbch' 'ojhsgjky' 'olivedream' 'ophone.chapter4_4' 'org'\n 'patax.fepefepopab' 'penetratepro' 'pintu.view' 'pire.xahovaxuno'\n 'pjthtn' 'player.xxx.super.girl.sett' 'playwithyourdogdalmatian' 'polooy'\n 'popdancequeenpartygirl' 'post.avproguard' 'proin' 'punbshfp' 'pziuxn'\n 'qBanHuoYingRenWu' 'qckbmn:es' 'qeam' 'qqlocation' 'qqmm' 'qqonline'\n 'qqxjdg' 'quri.genaqeburi' 'rjceni:es' 'rjmwep' 'rlucmxtu' 'roboty'\n 'ruganovich' 'ruhutianyi' 'saimadaheng1009' 'salonkrasoty' 'sbvoa'\n 'screensaver.alnine6' 'screensaver.hsxgiphone2' 'screensaver.mdn7'\n 'search' 'security' 'seeing.master.understanding.climate.knife'\n 'services' 'shuazuan' 'shuizu' 'sign' 'simkawang' 'singlebook254995'\n 'slushai' 'solitaire' 'stage' 'stlstart' 'systemui'\n 'talkingangela.yOUt1116.j.f.h.K.S' 'teje.texori' 'tencent.zdevs.bah'\n 'tencet.qbaiduq.weixin.org' 'three' 'traintime' 'ttdxbX' 'untoenynh'\n 'uowlnv:sev' 'uswg' 'uus02' 'uyuyp' 'vbnbg.zsag' 'vdfrt.hkb' 'view' 'vn'\n 'wgoosystem' 'wyyx.ttkpsjbwg' 'x' 'xavg.bgtwa' 'xgyhdk' 'xiaochu'\n 'xofwfj' 'yaoqianshu3' 'yhbdds.nxlfj' 'zhen002' 'zhenrenqian' 'zqjfewhb'\n 'zrlyuhm' 'zwyouhuadashic']\n[1 1 1 1 1 1 1 1 1 1 1 3 1 1 1 1 1 1 2 1 1 1 1 1 1 5 1 1 1 1 1 2 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1\n 1 1 1 1 1 1 1 1 4 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Below code looks at the makeup of unique procname values in hopes of creating tokens from the frequency of different subvalues\n",
+    "\n",
+    "first_level = []\n",
+    "second_level = []\n",
+    "third_level = []\n",
+    "procname_info = open(\"token_extraction\\\\raw\\\\procname.txt\", 'r')\n",
+    "for line in procname_info: \n",
+    "    value = line.split(\" - \")[0]\n",
+    "    levels = value.split('.')\n",
+    "    level_count = 0\n",
+    "    for level in levels:\n",
+    "        if level_count == 0:\n",
+    "            first_level.append(level)\n",
+    "        elif level_count == 1: \n",
+    "            second_level.append(level)\n",
+    "        elif level_count == 2:\n",
+    "            third_level.append('.'.join(levels[2:]))\n",
+    "        level_count += 1\n",
+    "\n",
+    "first_uniq, first_counts = np.unique(first_level, return_counts=True)\n",
+    "second_uniq, second_counts = np.unique(second_level, return_counts=True)\n",
+    "third_uniq, third_counts = np.unique(third_level, return_counts=True)\n",
+    "\n",
+    "print(first_uniq)\n",
+    "print(first_counts)\n",
+    "print('\\n')\n",
+    "\n",
+    "print(second_uniq)\n",
+    "print(second_counts)\n",
+    "print('\\n')\n",
+    "\n",
+    "print(third_uniq)\n",
+    "print(third_counts)\n",
+    "print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "method_info = open(\"token_extraction\\\\raw\\\\method.txt\", 'r')\n",
+    "formatted_lines = []\n",
+    "count = 95\n",
+    "for line in method_info:\n",
+    "    value = line.split(\" - \")[0]\n",
+    "    formatted_lines.append('{1}: (\\'\\\"method\\\": \\\"{0}\\\"\\', [\\'\\\"method\\\": \\\"{0}\\\"\\']),\\n'.format(value, count))\n",
+    "    count += 1\n",
+    "method_info.close()\n",
+    "\n",
+    "with open('formatted_methods.txt', 'w') as write:\n",
+    "    for line in formatted_lines:\n",
+    "        write.write(line)"
+   ]
   },
   {
    "source": [
